--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="hero-section">
             <div class="hero-content">
                 <h1 class="hero-title">Ιδιαίτερα Μαθήματα Φιλολογίας</h1>
-                <p class="hero-subtitle">Εξατομικευμένη διδασκαλία σε <b>Αρχαία Ελληνικά, Νέα Ελληνικά, Λατινικά, Ιστορία και Λογοτεχνία</b>. Με <b>πάνω από 10 χρόνια εμπειρίας</b> και πτυχίο Φιλολογίας από το <b>ΕΚΠΑ</b>, σας βοηθώ να επιτύχετε τους στόχους σας με αποτελεσματική μεθοδολογία και πάθος για τη διδασκαλία.</p>
+                <p class="hero-subtitle">Εξατομικευμένη διδασκαλία σε <b>Αρχαία Ελληνικά, Νέα Ελληνικά και Λογοτεχνία, Λατινικά, Ιστορία </b>. Με <b>πάνω από 10 χρόνια εμπειρίας</b> και πτυχίο Φιλολογίας από το <b>ΕΚΠΑ</b>, σας βοηθώ να επιτύχετε τους στόχους σας με αποτελεσματική μεθοδολογία και πάθος για τη διδασκαλία.</p>
                 <a href="#contact" class="hero-btn">Κλείστε Μάθημα Τώρα</a>
             </div>
             <div class="hero-image">
@@ -75,7 +75,14 @@
                     <div class="service-card">
                         <div class="service-icon">✍️</div>
                         <h3>Νέα Ελληνικά</h3>
-                        <p>Γλώσσα, έκθεση, σύνταξη κειμένων και ανάλυση λογοτεχνικών έργων. Ανάπτυξη γραπτού και προφορικού λόγου με εμπιστοσύνη και ευχέρεια.</p>
+                        <p>Γλώσσα, έκθεση, σύνταξη κειμένων και ανάλυση λογοτεχνικών έργων. Ανάπτυξη γραπτού και προφορικού λόγου με
+                            εμπιστοσύνη και ευχέρεια.</p>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-icon">🎭</div>
+                        <h3>Λογοτεχνία</h3>
+                        <p>Μελέτη της ελληνικής και παγκόσμιας λογοτεχνίας. Κριτική προσέγγιση έργων, ανάλυση χαρακτήρων και καλλιέργεια της
+                            αισθητικής αντίληψης.</p>
                     </div>
                     <div class="service-card">
                         <div class="service-icon">🏛️</div>
@@ -86,11 +93,6 @@
                         <div class="service-icon">📜</div>
                         <h3>Ιστορία</h3>
                         <p>Μελέτη της ελληνικής και παγκόσμιας ιστορίας. Ανάλυση ιστορικών γεγονότων, κριτική σκέψη και κατανόηση της εξέλιξης των πολιτισμών.</p>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-icon">🎭</div>
-                        <h3>Λογοτεχνία</h3>
-                        <p>Μελέτη της ελληνικής και παγκόσμιας λογοτεχνίας. Κριτική προσέγγιση έργων, ανάλυση χαρακτήρων και καλλιέργεια της αισθητικής αντίληψης.</p>
                     </div>
                     <div class="service-card">
                         <div class="service-icon">🎓</div>
