--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta property="og:title" content="Φιλολογικά Ιδιαίτερα Μαθήματα | Κωνσταντίνα Κλειτσάκη">
         <meta property="og:description" content="Εξατομικευμένα μαθήματα Φιλολογίας με 10+ χρόνια εμπειρίας. Αρχαία, Νέα Ελληνικά, Λατινικά, Ιστορία. Προετοιμασία Πανελληνίων.">
         <meta property="og:type" content="website">
-        <title>Ιδιαίτερα Μαθήματα | Κωνσταντίνα Κλειτσάκη</title>
+        <title>Ιδιαίτερα Μαθήματα | Κωνσταντίνα</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Greek:wght@400;700&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
     <body>
         <header>
             <div class="logo-container">
-                <h1>Κωνσταντίνα Κλειτσάκη</h1>
+                <h1>Κωνσταντίνα</h1>
             </div>
             <nav>
                 <ul>
@@ -153,7 +153,7 @@
         </main>
         <footer>
             <div class="footer-content">
-                <p>&copy; 2025 Κωνσταντίνα Κλειτσάκη - Φιλόλογος</p>
+                <p>&copy; 2025 Κωνσταντίνα - Φιλόλογος</p>
                 <p style="font-size: 0.9rem; opacity: 0.8; margin-top: 0.5rem;">Αρχαία Ελληνικά | Νέα Ελληνικά | Λατινικά | Ιστορία | Λογοτεχνία</p>
             </div>
         </footer>
