--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <footer>
             <div class="footer-content">
                 <p>&copy; 2025 Κωνσταντίνα Κλειτσάκη - Φιλόλογος</p>
-                <p style="font-size: 0.9rem; opacity: 0.8; margin-top: 0.5rem;">Αρχαία Ελληνικά | Νέα Ελληνικά | Λατινικά | Ιστορία | Λογοτεχνία</p>
+                <p style="font-size: 0.9rem; opacity: 0.8; margin-top: 0.5rem;">Αρχαία Ελληνικά | Νέα Ελληνικά | Λογοτεχνία | Λατινικά | Ιστορία</p>
             </div>
         </footer>
         <script src="js/script.js"></script>
